# streamlit-dbt-docs

./: .gitignore  README.md  justfile
.github/: pull_request_template.md
apps/dbt-docs/: .dockerignore  .gitignore  Dockerfile  justfile  pyproject.toml  requirements.txt  snowflake.yml  spec.yaml  streamlit_app.py
apps/dbt-docs/.snowflake/: config.toml
apps/dbt-docs/.streamlit/: config.toml
apps/dbt-docs/common/: snowflake_connection.py
apps/dbt-docs/scripts/: spcs_release.sh  streamlit_release.sh
