[project]
name = "training-snowpark-container-service"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "pyarrow<19.0.0",
    "snowflake-cli-labs>=0.2.9",
    "snowflake-connector-python>=3.15.0",
    "streamlit>=1.45.0",
    "snowflake-snowpark-python>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.mypy]
python_version = "3.12"
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
explicit_package_bases = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
    "black>=24.4.0",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]
ignore = []

[tool.black]
line-length = 120
target-version = ["py311"]

